# chatty-commander

./: .coverage  .dockerignore  .env  .env.example  .env.schema  .env.template  .gitignore  .gitignore.bak.1755297740  .pre-commit-config.yaml  .ruffignore  AI_IMPLEMENTATION_SUMMARY.md  ARCHITECTURE.md  C:\Windows\System32\config\sam  CHANGELOG.md  CLAUDE.md  CLEANUP_PLAN.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FEATURE_AUDIT_REPORT.md  FEATURE_STATUS.md  FINAL_STATUS.md  IMPLEMENTATION_STATUS.md  MANIFEST.in  MIGRATING.md  Makefile  PROGRESS.md  QUALITY_REPORT.md  QUALITY_REVIEW.md  README.md  README.md.bak.1755297733  ROADMAP.md  SECURITY.md  TODO.md  TOP_LEVEL_AUDIT.md  ULTRA_AMBITIOUS_OPTIMIZATION.md  WEBUI_DEMO_OUTPUTS.md  WEBUI_IMPLEMENTATION.md  WEBUI_PLAN.md  WEBUI_ROADMAP.md  (+108 more)
.Jules/: hone.md  palette.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: rfc.md
.github/workflows/: ci.yml  codeql.yml  docs.yml  dograh-integration.yml  e2e-screenshots-gallery.yml  perf-nightly.yml  perf-smoke.yml  release.yml  screenshots.yml  visual-regression.yml
.jules/: bolt.md  hone.md  palette.md  sentinel.md
.letta/: settings.json
.serena/: project.yml
.serena/memories/: code_style_and_conventions.md  project_overview.md  suggested_commands.md  task_completion_steps.md
app/: index.html  package-lock.json  package.json  tsconfig.json
app/src/: main.tsx
archive/: check_installation.sh  check_installation_output.txt  keybindings_demo.sh  scripts_content.txt  startup_apps.desktop  startup_apps.sh  tcpdump_script.sh
archive/tcpdump/: tcpdump_20240617130635.pcap
chatty_commander/: __init__.py  main.py
chatty_commander.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
config/: .env.template  .pre-commit-config.yaml  README.md  config.json  config.json.template  full-assistant-example.json  pytest.ini
configs/: developer-tools-example.json  full-assistant-example.json  voice-only-example.json
deploy/: Dockerfile
deploy/docker/: docker-compose.yml
deploy/k8s/: deployment.yaml
deploy/packaging/: run_cli.py
docs/: ADAPTERS.md  AGENT_BLUEPRINT_MANAGEMENT.md  API.md  ARCHITECTURE.md  ARCHITECTURE_OVERVIEW.md  AVATAR_GUI.md  BACKGROUND_TASK_RUNNER.md  BODY_ANIMATION_CONTROLS.md  CHANGELOG.md  CLEANUP_SUMMARY.md  CONFIGURATION_EXAMPLES.md  CONFIG_SCHEMA.md  CONTRIBUTING.md  CUSTOM_MODES_AND_PERSONAS.md  DETAILED_TODO.md  DEVELOPER.md  DEVELOPER_SETUP.md  DEVELOPMENT_ROADMAP.md  GESTURE_CONTROL.md  GIT_STATUS_ANALYSIS.md  INTERPRETIVE_DANCE_MODE.md  MIGRATING.md  MODES_OF_OPERATION.md  NEW_CONTRIBUTOR_GUIDE.md  OPENAI_AGENTS_ADVISOR.md  PROJECT_GOALS.md  PR_MILESTONE_1.md  README.md  RECURRING_PROMPTS.md  RFC_PROCESS.md  STANDALONE_INSTALL.md  STANDALONE_PACKAGING_PLAN.md  STRUCTURE.md  TESTING.md  TODO.md  TODO_OLD.md  TOP_LEVEL_AUDIT.md  TROUBLESHOOTING.md  USAGE.md  USER_GUIDE.md  (+10 more)
docs/developer/: ADAPTERS.md  AGENT_STEERING.md  (+22 more)
k8s/: deployment.yaml
models-chatty/: lights_off.onnx  lights_on.onnx  thanks_chat_tee.onnx  that_ill_do.onnx  wax_poetic.onnx
models-computer/: cycle_window.onnx  oh-kee-dokey.onnx  oh_kay_screenshot.onnx  okay_stop.onnx
models-idle/: hey_chat_tee.onnx  hey_khum_puter.onnx  lights_off.onnx  lights_on.onnx  okay_send.onnx  thanks_chat_tee.onnx  that_ill_do.onnx
monitoring/: prometheus.yml
packaging/: run_cli.py
playwright-report/: index.html
qa/: __init__.py  code_quality_agent.py  dependency_audit_agent.py  documentation_agent.py  fleet_commander.py  implementation_fleet_launcher.py  performance_agent.py  security_audit_agent.py  strategy_implementation_orchestrator.py  test_coverage_agent.py  timing_dashboard.py
reports/: triage_2025-08-16T08-17-14+10-00.md  triage_2025-08-16T08-32-33+10-00.md
scripts/: clean_apply.sh  clean_preview.sh  cleanup_branches.sh  codex_voice_demo.py  curate_history.sh  curate_history_proposal.py  deploy.sh  dev_gate.sh  e2e_smoke.sh  ensure_gitignore.sh  guarded_commit.sh  improve_test_quality.py  mask_json.py  seed_dograh.py  setup_dograh_providers.sh  system_tester.py  triage.sh  validate_screenshots.py  voice_demo.py  voice_demo_recording.py  walkthrough_smoke.sh  web_integration_tester.py  worktrees_report.sh
server/: index.ts  package.json  tsconfig.json
shared/: ascii.js  ascii.mjs  ascii.ts  esbuild.ts
src/: cli.py  command_executor.py  config.py  config_cli.py  conftest.py  default_config.py  demo_voice_chat.py  gui.py  helpers.py  main.py  model_manager.py  state_manager.py  web_mode.py
tests/: EXAMPLE_REFACTORED_TEST.py  TEST_STRATEGY.md  conftest.py  package.json  test_1337_ultimate_coverage.py  test_60_percent_final.py  test_advisors_browser_analyst.py  test_advisors_browser_analyst_tool.py  test_advisors_context.py  test_advisors_llm_integration.py  test_advisors_memory.py  test_advisors_memory_api.py  test_advisors_memory_disabled.py  test_advisors_prompting.py  test_advisors_prompts.py  test_advisors_provider_selection.py  test_advisors_providers.py  test_advisors_recurring.py  test_advisors_service.py  test_advisors_service_real_llm.py  test_advisors_templates.py  test_advisors_tool_call.py  test_advisors_tools_switch_mode.py  test_agent_fleet.py  test_agents_api.py  test_agents_api_create_from_description.py  test_agents_api_crud_happy_path.py  test_agents_api_errors.py  test_agents_api_handoff_404.py  test_agents_api_list_empty.py  test_agents_api_persistence.py  test_agents_api_update_delete_404.py  test_agents_helpers.py  test_ai_error_dependency_failures.py  test_ai_error_graceful_degradation.py  test_ai_error_handling.py  test_ai_error_handling_exhaustive.py  test_ai_error_invalid_inputs.py  test_ai_error_network_issues.py  test_ai_error_resource_exhaustion.py  (+285 more)
utils/: __init__.py  logger.py
verification/: verify_websocket.py
wakewords/: hey_chat_tee.onnx  hey_khum_puter.onnx  lights_off.onnx  lights_on.onnx  oh_kay_screenshot.onnx  okay_stop.onnx  thanks_chat_tee.onnx  that_ill_do.onnx  wax_poetic.onnx
webui/: __init__.py
workers/: canvas-builder.ts  package-lock.json  package.json  tsconfig.json
(+672 files in other folders)
