[project]
name = "chatty-commander"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openwakeword>=0.4.0",
    "pyautogui>=0.9.54",
    "pytest>=8.4.1",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "watchdog>=3.0.0",
    "requests>=2.32.4",
    "psutil>=7.0.0",
    "fastapi>=0.116.1",
    "uvicorn[standard]>=0.35.0",
    "python-jose[cryptography]>=3.5.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.20",
    "pyjwt>=2.10.1",
    "bcrypt==4.0.1",
    "websockets>=15.0.1",
    "httpx>=0.28.1",
    "pywebview>=4.4",
    "pystray>=0.19.5",
    "onnx==1.18.0",
    "openai-agents>=0.1.0",
]

[project.scripts]
chatty-commander = "chatty_commander.cli.cli:main"

[dependency-groups]
dev = [
    "ruff>=0.1.0",
    "black>=23.0.0",
    "doc8>=1.1.1",
    "pydocstyle>=6.0.0",
    "pytest-check-links>=0.5.0",
]

[tool.coverage.run]
source = [
    ".",
]
omit = [
    "tests/*",
    "archive/*",
    "webui/frontend/*",
    "*/__pycache__/*",
    "*/site-packages/*",
    "config-*.py",
]

# Removed legacy setuptools block for old flat-layout (py-modules, utils)
[tool.black]
line-length = 100
target-version = ["py311"]
include = "\\.pyi?$"
skip-string-normalization = true

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["webui/frontend", "node_modules", ".venv", "venv", "build", "dist", ".pytest_cache", "htmlcov"]
src = ["."]
fix = true

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # bugbear
  "UP",  # pyupgrade
]
ignore = [
  "E203",  # whitespace before ':', compatible with Black
  "E266",  # too many leading '#' for block comment
  "E501",  # handled by Black
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E402", "F401", "F841", "B007"]

[tool.ruff.format]
quote-style = "preserve"
indent-style = "space"
docstring-code-format = true
skip-magic-trailing-comma = false
[tool.pydocstyle]
convention = "google"
add-ignore = [
  "D100", # Missing docstring in public module
  "D101", # Missing docstring in public class
  "D102", # Missing docstring in public method
  "D103", # Missing docstring in public function
  "D104", # Missing docstring in public package
  "D105", # Missing docstring in magic method
  "D107", # Missing docstring in __init__
  "D200", # One-line docstring should fit on one line
  "D205", # 1 blank line required between summary line and description
  "D212", # Multi-line docstring summary should start at the first line
  "D403", # First word of the first line should be properly capitalized
  "D415", # First line should end with punctuation
]

[tool.doc8]
max-line-length = 100
ignore = ["D001"]
[tool.setuptools]
package-dir = {"" = "src"}
packages = ["chatty_commander"]

[tool.setuptools.package-data]
chatty_commander = ["py.typed"]

[tool.uv]
package = true
